Fix responsivity to all screen sizes, some of the content overlapped on smaller screens.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,12 +71,15 @@ h1 {
     font-family:'kalam';
 }
 h2, h3, h4 {
-    font-size: 140%;
+    font-size: 120%;
     color: black;
     font-family:'kalam';
+    margin-bottom: 0.75rem;
 }
 p {
+
     color: #1B2C37;
+    margin-bottom: 0.5rem;
 }
 .head_text {
     color: white;
@@ -100,6 +103,13 @@ p {
     background-clip: border-box;
     border: 1px solid rgba(0,0,0,.125);
     border-radius: 1.5rem;
+    height:auto;
+}
+
+.card-post-detail {
+    min-height: 400px;
+    flex: 1 1 auto;
+    padding: 1rem 1rem;
 }
 
 
@@ -116,6 +126,17 @@ p {
 }
 
 
+body {
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    background-color: #E2FDFF;
+    color: white;
+    min-height: 100vh;
+}
+
+.row2 {
+    flex-wrap: unset;
+}
 
 .button:hover {
     background-color: #96DDED;
@@ -124,9 +145,9 @@ p {
 .button {
     border: solid 1px #fafafa;
     border-radius: 5px;
-    padding: 2px 2px 2px 5px;
+    padding: 2px 1px 2px 5px;
     width: 150px;
-    margin-bottom: 10px;
+    margin-bottom: 0.5rem;
 
 
 }
@@ -152,4 +173,8 @@ button {
 .form-control {
     margin-bottom: 10px;
 }
+input {
+display: block;
+}
 
+ 
